--- a/web/static/pm25.html
+++ b/web/static/pm25.html
@@ -38,6 +38,7 @@
         <script type="text/javascript">
             $(function () {
                 $('#datetimepicker1').datetimepicker({defaultDate:moment()-24*60*60*1000,maxDate:moment()});
+                $('#datetimepicker1').val(moment()-24*60*60*1000)
                 $('#datetimepicker2').datetimepicker({defaultDate: moment(),maxDate: moment()});
             });
         </script>
