--- a/web/static/pm25.html
+++ b/web/static/pm25.html
@@ -8,13 +8,12 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 
 
-        <link href="http://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
+<link href="http://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
 <!-- --------------------------------------------------------------------- -->
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
@@ -27,23 +26,26 @@
                $.post({url:"/getData",
                        dataType: 'json',
                        data:{"starttime":st,"endtime":en,"sensor":sen},
-                       success:function(result){console.log(result);}});
-              
-var data = google.visualization.arrayToDataTable([
-          ['Year', 'Sales', 'Expenses'],
-          ['2004',  1000,      400],
-          ['2005',  1170,      460],
-          ['2006',  660,       1120],
-          ['2007',  1030,      540]
-        ]);
+                       success:function(result){
+                             console.log(result);
+                             var data=[['Time','PM2.5','PM10']];
+                             for (var i=0;i<result.length;i++){
+                                  var time=new Date(result[i][1]*1000);
+                                  var pm25=JSON.parse(result[i][0])[0];
+                                  var pm10=JSON.parse(result[i][0])[1];
+                                  data.push([time,pm25,pm10]);
+                             }
+                             data=google.visualization.arrayToDataTable(data);
+                             var options={
+                                 title: 'PM2.5 and PM10',
+                                 curveType: 'function',
+                                 legend: { position: 'bottom' }
+                             };
+                             var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+                             chart.draw(data, options);
+                       }});
 
-      var options = {
-          title: 'Company Performance',
-          curveType: 'function',
-          legend: { position: 'bottom' }
-        };
-              var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-              chart.draw(data, options);
+
             }
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(updateChart);
