--- a/web/static/pm25.html
+++ b/web/static/pm25.html
@@ -61,11 +61,14 @@
                 $('#datetimepicker1').datetimepicker({defaultDate:moment()-24*60*60*1000,maxDate:moment()});
                 $('#datetimepicker1').data("DateTimePicker").date(new Date(moment()-24*3600*1000))
                 $('#datetimepicker2').datetimepicker({defaultDate: moment(),maxDate: moment()});
+                $('#datetimepicker2').on("dp.show",function(e){
+                        $('#datetimepicker2').maxDate(moment());
+                });
                 $('#datetimepicker1').on("dp.hide",function(e)
                         {
                             updateChart();
                         });
-                $('#datetimepicker1').on("dp.hide",function(e)
+                $('#datetimepicker2').on("dp.hide",function(e)
                         {
                             updateChart();
                         });
