--- a/web/static/pm25.html
+++ b/web/static/pm25.html
@@ -78,8 +78,8 @@
                        dataType: 'json',
                        data:{"sensorCurrent":"sensor1Current"}, //NB
                        success:function(result){
-                          $('#pm25').text(result[0]);
-                          $('#pm10').text(result[1]);
+                          $('#pm25').text(JSON.parse(result)[0]);
+                          $('#pm10').text(JSON.parse(result)[1]);
                 }});
 
                 setInterval(function(){
@@ -87,8 +87,8 @@
                        dataType: 'json',
                        data:{"sensorCurrent":"sensor1Current"}, //NB
                        success:function(result){
-                          $('#pm25').text(result[0]);
-                          $('#pm10').text(result[1]);
+                          $('#pm25').text(JSON.parse(result)[0]);
+                          $('#pm10').text(JSON.parse(result)[1]);
                        }});
                  },10000); //every 10 seconds
 
